<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1937A"
    tools:context=".HomeActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detailsRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:layout_alignParentEnd="true"
       android:layout_alignParentRight="true"
       android:src="@drawable/ic_add"
       app:tint="#cc0000"
       android:backgroundTint="@color/white"
       android:layout_margin="20dp"
       android:id="@+id/addDetails">
   </com.google.android.material.floatingactionbutton.FloatingActionButton>




</RelativeLayout>