...
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="7dp"
    app:cardElevation="4dp"
    android:id="@+id/card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:text="Delete"
                android:textColor="@color/black"
                android:backgroundTint="@android:color/holo_red_light"
                android:id="@+id/btndel"
                />


        </LinearLayout>


...
