<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/insert"
    tools:context=".InsertActivity">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        >

        <LinearLayout
            android:layout_width="377dp"
            android:layout_height="740dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borderr"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter data"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/date"
               android:background="@drawable/borderr"
               android:layout_marginTop="20dp"
               android:layout_marginLeft="15dp"
               android:layout_marginRight="15dp"
               android:padding="16dp"
               android:hint="dd/mm/yy"
               android:gravity="start|center_vertical"
               android:textColor="@color/purple_500"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/time"
                android:background="@drawable/borderr"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="16dp"
                android:hint="hh:mm"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/systolic"
                android:background="@drawable/borderr"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="16dp"
                android:hint="enter systolic pressure"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/diastolic"
                android:background="@drawable/borderr"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="16dp"
                android:hint="enter diastolic pressure"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/heartRate"
                android:background="@drawable/borderr"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="16dp"
                android:hint="Heart rate"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Comment"
                android:background="@drawable/borderr"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="16dp"
                android:hint="Comment"
                android:gravity="start|center_vertical"
                android:textColor="@color/purple_500"/>

         <Button
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/borderr"
             android:text="Save"
             android:textSize="20sp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="30dp"
             android:id="@+id/saveButton"

             />



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</ScrollView>